--- a/sandbox/pom.xml
+++ b/sandbox/pom.xml
@@ -19,6 +19,21 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>8.0.4.v20111024</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-servlet</artifactId>
+            <version>8.0.4.v20111024</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scalatra</groupId>
+            <artifactId>scalatra</artifactId>
+            <version>2.1.1</version>
+        </dependency>
     </dependencies>
   
 </project>
