Updated versions .. in version hell

--- a/lift-sandbox/static-data-gui/project/build.properties
+++ b/lift-sandbox/static-data-gui/project/build.properties
@@ -1,2 +1,5 @@
 // got to have this version for lifty to work .. no later version
 sbt.version=0.11.2
+
+// this version works for sbt-idea plugin
+//sbt.version=0.11.3
